<resources>
    <!--    <string name="app_name">Davincii Studios</string>-->
    <string name="app_name">Diiclae</string>
    <string name="create_a_new_account_sign_up">Create a new account?<b>Sign up</b></string>
    <string name="already_have_a_account_log_in">Already have a account? <b>Log in</b></string>
    <string name="creator_collector"><![CDATA[Creator & Collector]]></string>
    <string name="signup_as_a_business">Signup as a Business</string>
    <string name="password_reset_instructions_will_be_sent_to_the_email_used_to_create_your_account">Password reset instructions will be sent to the email used to create your account</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="johndeo">Johndeo</string>
    <string name="payment_methods">Payment <b>Methods</b></string>
    <string name="payment_details">Payment Details</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="paypal">PayPal</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="cvv">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="credit_or_debit_card">Credit or Debit Card</string>
    <string name="add_new_card">Add New Card</string>
    <string name="delete_saved_card">Delete Saved Card?</string>
    <string name="are_you_sure_you_want_to_delete_this_saved_card">Are you sure you want to delete this saved card?</string>
    <string name="no">No</string>
    <string name="yes">yes</string>
    <string name="title_activity_message_open">MessageOpen</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="creator__collector">Creator/Collector</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="https_davincii_studio_com">https://davincii-Studio.com</string>
    <string name="contact">Contact</string>
    <string name="edit">Edit</string>
    <string name="_0">0</string>
    <string name="_90">90</string>
    <string name="_11">11</string>
    <string name="pieces">Pieces</string>
    <string name="supportes">Supportes</string>
    <string name="supporting">Supporting</string>
    <string name="john__deo">johndeo</string>
    <!-- TabLayout Tabs Name-->
    <string name="tabnameone">UP_CreationFragment</string>
    <string name="tabnametwo">UP_CollectionFragment</string>
    <string name="settings">Settings</string>
    <string name="my_link">My Link</string>
    <string name="davincii_studios_com_kingdavincii">davincii-studios.com/kingdavincii</string>
    <string name="community">Community</string>
    <string name="find_friends">Find Friends</string>
    <string name="support">Support</string>
    <string name="need_help">Need Help?</string>
    <string name="card_details">Card Details</string>
    <string name="log_out">logout</string>
    <string name="new_canvas">New Canvas</string>
    <string name="next">Next</string>
    <string name="select_a_canvas_and_a_picture">Select a Canvas and a Picture</string>
    <string name="recents">Recents</string>
    <string name="call">Call</string>
    <string name="_0123456789">0123456789</string>
    <string name="jondeo123_gmail_com">jondeo123@gmail.com</string>
    <string name="john___deo">JOHN DEO</string>
    <string name="valid_upto">VALID UPTO</string>
    <string name="_4000_1234_5678_6010">4000 1234 5678 6010</string>
    <string name="_12_22">12/22</string>
    <string name="emilia_deo_started_supporting_you">Emilia Deo</string>
    <string name="adelbert_lorem_ipsum_or_lipsum_as_it_is_sometimes"><b>Adelbert </b>Lorem ipsum, or lipsum as it is sometimes...</string>
    <string name="reply">Reply</string>
    <string name="message">Message</string>
    <string name="no_artwork_in_this_studio_yet">No Artwork In This Studio Yet</string>
<!--    <string name="aws_kay">AKIA346TK5MNUBKC6SFP</string>-->
<!--    <string name="hidden_kay">4DB/6XZCFEIlTc96B2a4dSnqOAcb7louxqFYoGWj</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete"><u>Delete</u></string>
    <string name="art_bio">Hay i appreciate how are you ok please let me know i would love to show you around, let me know if theres anything i can do, can you call me when you get there because.... <b><font fgcolor='#ffffff'>Read More</font></b></string>

    <!--    <string name="aws_kay">AKIA6M4YMEOAOV5ADOK4</string>-->
    <!--    <string name="hidden_kay">1SL9vE/tbtbnC7zn5j7tnpZ9SBHliNX57C7pIt0g</string>-->


</resources>