<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_9sdp"
            android:src="@drawable/ic_back_long_arrow"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_36sdp"
            android:fontFamily="@font/glacial_bold"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/add_new_card"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/card_holder_name"
                android:textColorHint="@android:color/white"
                app:boxStrokeColor="#AB4A69"
                app:hintTextAppearance="@style/TextLabel"
                app:hintTextColor="@color/white">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3BFFFFFF"
                    android:background="@drawable/back_btn"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/glacial_regular"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/_12sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/card_number"
                android:textColorHint="@android:color/white"
                app:boxStrokeColor="#AB4A69"
                app:hintTextAppearance="@style/TextLabel"
                app:hintTextColor="@color/white">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3BFFFFFF"
                    android:background="@drawable/back_btn"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/glacial_regular"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/_12sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/su_firstname"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/expiry_month"
                        android:textColorHint="@color/white"
                        app:boxStrokeColor="#A7A7A7"
                        app:hintTextAppearance="@style/TextLabel"
                        app:hintTextColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_arrow_down"
                            android:fontFamily="@font/glacial_regular"
                            android:inputType="textCapSentences"
                            android:backgroundTint="#3BFFFFFF"
                            android:background="@drawable/back_btn"

                            android:textSize="@dimen/_12sdp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/su_lastname"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_18sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/expiry_year"
                        android:textColorHint="@color/white"
                        app:boxStrokeColor="#A7A7A7"
                        app:hintTextAppearance="@style/TextLabel"
                        app:hintTextColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_arrow_down"
                            android:fontFamily="@font/glacial_regular"
                            android:inputType="textCapSentences"
                            android:backgroundTint="#3BFFFFFF"
                            android:background="@drawable/back_btn"

                            android:textSize="@dimen/_12sdp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/cvv"
                android:textColorHint="@android:color/white"
                app:boxStrokeColor="#AB4A69"
                app:hintTextAppearance="@style/TextLabel"
                app:hintTextColor="@color/white">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3BFFFFFF"
                    android:background="@drawable/back_btn"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/glacial_regular"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/_12sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_180sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/back_btn"
                android:fontFamily="@font/glacial_regular"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/add_card"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>