<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/black"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

<!--            <ImageView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="@dimen/_250sdp"-->
<!--                android:layout_marginTop="-4dp"-->
<!--                android:layout_marginEnd="-4dp"-->
<!--                android:scaleType="fitXY"-->
<!--                android:src="@drawable/top_image" />-->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginHorizontal="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/app_icon_new" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/dicalae_new"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/glacial_regular"
                android:gravity="center"
                android:text="@string/password_reset_instructions_will_be_sent_to_the_email_used_to_create_your_account"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/_10sdp" />

                    <EditText
                        android:id="@+id/fp_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_36sdp"
                        android:backgroundTint="#3BFFFFFF"
                        android:background="@drawable/edit_text_bg"
                        android:fontFamily="@font/glacial_regular"
                        android:inputType="text"
                        android:hint="@string/email"
                        android:textColorHint="@android:color/white"
                        android:textColor="@color/white"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_30sdp"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginHorizontal="@dimen/_12sdp"/>



            <TextView
                android:id="@+id/fp_subimt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/back_btn"
                android:gravity="center"
                android:onClick="submitbtn"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

</LinearLayout>